style.css
/* SETUP CSS USING TEMPLATE */

/* 1. Use a more-intuitive box-sizing model. */
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* 2. Remove default margin */
* {
    margin: 0;
}

/*
  Typographic tweaks!
  3. Add accessible line-height
  4. Improve text rendering
*/
body {
    background-color: var(--background);
    color: var(--primary);
    font-family: 'Nunito', sans-serif;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    margin: 24px;
    margin-left: 48px;
    margin-right: 48px;
}

/* 5. Improve media defaults */
img,
picture,
video,
canvas,
svg {
    display: block;
}

/* 6. Remove built-in form typography styles */
input,
button,
textarea,
select {
    font: inherit;
}

/* 7. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

/* 8. Create a root stacking context */
#root,
#__next {
    isolation: isolate;
}


/* GENERAL CSS */
* {
    /* OLD COLOURS
    background: #425037
    text: #DFBA8F
    hover/highlight: #8aab81
    */
    --background: #3A4D39;
    --primary: #f0ddb0;
    --primary-link: #b3c5af;
}

h1 {
    font-family: 'Chicle', cursive;
    font-size: 700%;
    font-weight: 400;
    text-align: center;
}

div {
    display: flex;
}

a {
    color: var(--primary);
    font-size: larger;
}

p {
    color: var(--primary);
    font-size: 1.6rem;
    padding-bottom: 8px;
    padding-top: 8px;
}


/* NAVBAR CSS */
.navbar {
    align-items: center;
    padding-top: 16px;
    padding-bottom: 16px;
    border-bottom: 1px solid var(--primary);
    display: flex;
    justify-content: space-between;
}

.nav-list {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
    transition: transform 0.3s ease-in-out;
}

.nav-list li {
    margin: 0 0 0 15px;
}

.nav-list a {
    text-decoration: none;
    text-align: right;
    display: flex;
    float: right;
    font-size: 1.6rem;
}

.navbar a:hover {
    color: var(--primary-link);
    transition: color 0.5s ease;
}

.menu-icon {
    cursor: pointer;
    display: none;
}

.bar {
    width: 25px;
    height: 3px;
    background-color: var(--primary);
    margin: 5px 0;
}

.contact-link {
    padding-right: 0;
}


/* PAGE STYLES */
/* This is a fade animation that makes each page's content fade in once it switches to a new page */
@keyframes fadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

.page-content {
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
}

body {
    animation: fadeIn 0.5s ease-in;
}

h {
    font-family: 'Chicle', cursive;
    font-size: 700%;
    position: relative;
}

h2 {
    font-family: 'Chicle', cursive;
    font-weight: 400;
    font-size: 480%;
}

h3 {
    font-family: 'Chicle', cursive;
    font-weight: 400;
    font-size: 360%;
}

.heading {
    text-align: left;
}


/* INDEX PAGE CSS (LANDING PAGE) */
.homepage-hello {
    font-family: 'Nunito', sans-serif;
    font-weight: 400;
    font-size: 360%;
}

.main-heading {
    padding-top: 10px;
}

.hannah-images {
    display: flex;
    flex-direction: column;
    margin-right: 12px;
    width: 100%;
    flex: 2;
}

.hannah-pic {
    max-width: 80%;
    height: auto;
    width: 100%;
    margin: 0;
}



/* ABOUT ME CSS */
.lower-body-content {
    padding: 10px;
}

.about-me-heading-left {
    flex: auto;
    display: inline;
    margin-right: 70px;
    margin-top: 10px;
    text-align: left;
    flex: 2;
}

.about-me-heading-right {
    flex: auto;
    display: inline;
    margin-left: 80px;
    margin-top: 10px;
    text-align: right;
    flex: 2;
}

.body-content {
    margin-top: 50px;
}

.sound-designer {
    margin-top: 24px;
}

.about-links {
    font-family: 'Nunito', sans-serif;
    color: var(--primary-link);
    font-size: 1.6rem;
    text-decoration: none;
}

.about-links:hover {
    color: var(--primary);
    transition: color 0.5s ease;
}


/* ANIMATIONS FOR HOVERING A LINK AND LINE SPAWNS UNDERNEATH IT AND FADES */
.hover-underline {
    font-family: 'Nunito', sans-serif;
    color: var(--primary-link);
    font-size: 1.6rem;
    text-decoration: none;
    display: inline-block;
    position: relative;
}

.hover-underline::after {
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 1px;
    bottom: 10%;
    left: 0;
    background-color: var(--primary-link);
    transform-origin: bottom right;
    transition: transform 0.25s ease-out;
}

.hover-underline:hover::after {
    transform: scaleX(1);
    transform-origin: bottom left;
}



/* PORTFOLIO PAGE CSS */
.portfolio {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: 24px;
}

.portfolio-item {
    width: 32%;
    background-color: #ece9e021;
    margin: 8px;
    overflow: hidden;
    position: relative;
    border-radius: 6px;
    display: flex;
    flex-direction: column;
}

.portfolio-item img {
    width: 100%;
    padding: 16px;
    padding-bottom: 0;
    height: auto;
}

.portfolio-text {
    font-size: 1rem;
    text-align: center;
    color: var(--primary-link);
    margin: 8px;
}

.portfolio-lower {
    display: flex;
    flex-direction: column;
}

.portfolio-skills-text {
    font-size: 0.7rem;
    text-align: center;
    color: var(--primary-link);
}


/* CONTACT CSS */
.contact-body {
    overflow-x: hidden;
}

.contact-text {
    text-align: center;
    margin: 16px auto;
}

.get-in-touch {
    font-family: 'Nunito', sans-serif;
    font-weight: 400;
    font-size: 360%;
    text-align: center;
}

.description2 {
    font-size: 110%;
    font-style: italic;
}

.centered {
    display: block;
    text-align: center;
    align-items: center;
    margin-top: 30px;
    margin-bottom: 30px;
}

.icons {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 6vh;
    width: 100%;
}

.github-logo,
.linkedin-logo,
.soundcloud-logo,
.spotify-logo,
.instagram-logo {
    font-size: 150%;
}

.icons a i {
    color: var(--primary);
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
    transition: color 0.3s ease-in;
}

.icons a:hover i {
    color: var(--primary-link);
}

.icons a:nth-child(1) i {
    animation: fadeIn 0.5s ease-in-out 0.5s forwards;
}

.icons a:nth-child(2) i {
    animation: fadeIn 0.5s ease-in-out 0.7s forwards;
}

.icons a:nth-child(3) i {
    animation: fadeIn 0.5s ease-in-out 0.9s forwards;
}

.icons a:nth-child(4) i {
    animation: fadeIn 0.5s ease-in-out 1.1s forwards;
}

.icons a:nth-child(5) i {
    animation: fadeIn 0.5s ease-in-out 1.3s forwards;
}


/* FOOTER CSS */
footer {
    margin-top: 100px;
    margin-bottom: 0;
    border-top: 1px solid var(--primary);
}

.footer-group {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.footer-text {
    color: var(--primary);
    font-size: 0.8rem;
}


/* Media query for smaller screens 
    This just makes the number of 'panels' in the portfolio
    2 items wide when a certain screen width */
@media (max-width: 1300px) {
    .portfolio-item {
        width: 48%;
    }
}

/* For super small phone screens */
@media (max-width: 500px) {
    body {
        margin-left: 24px;
        margin-right: 24px;
    }

    p {
        font-size: 1.2rem;
    }

    .about-links {
        font-size: 1.2rem;
    }

    h2 {
        font-size: 3.6rem;
    }
}

/* MEDIA TAGS FOR GENERAL MOBILE SCREEN SIZE ADJUSTMENTS */
@media only screen and (max-width: 900px) {
    /* Center all elements vertically and stack them */

    @keyframes fadeIn2 {
        to {
            opacity: 1;
        }
    }

    @keyframes fadeOut {
        from {
            opacity: 1;
        }

        to {
            opacity: 0;
        }
    }

    .nav-list {
        display: none;
        flex-direction: column;
        position: absolute;
        top: 96px;
        bottom: 0px;
        right: 0;
        width: 100%;
        background-color: var(--background);
        text-align: center;
        z-index: 99999;
        opacity: 0;
        animation: fadeIn2 0.3s ease;
    }

    .home-link {
        order: -1;
    }

    .nav-list li {
        opacity: 0;
        margin: 8px;
        margin-top: 16px;
        margin-right: 48px;
        animation: fadeIn2 0.5s ease forwards;
    }

    .nav-list li:hover {
        color: var(--primary-link);
        transition: color 0.5s ease;
    }

    .nav-list.show {
        display: flex;
        animation: fadeIn2 0.5s ease forwards;
    }

    .nav-list.hide {
        animation: fadeOut 0.5s ease forwards;
    }

    .nav-list li:nth-child(1) {
        animation-delay: 0.2s;
        /* Adjust the delay based on your preference */
    }

    .nav-list li:nth-child(2) {
        animation-delay: 0.4s;
    }

    .nav-list li:nth-child(3) {
        animation-delay: 0.6s;
    }

    .menu-icon {
        display: block;
    }

    /* Center the heading */
    h,
    .about-me-heading-left,
    .about-me-heading-right {
        text-align: center;
        margin: 0 auto;
    }

    .homepage-hello {
        text-align: center !important;
        margin: 0 auto !important;
        display: block !important;
    }

    .hannah-images {
        display: flex;
        align-items: center;
        margin: 0;
    }

    .hannah-pic {
        width: 400px;
        height: 400px;
        max-width: 90%;
        max-height: 90%;
        height: auto;
        margin-top: 30px;
        margin-bottom: 30px;
    }

    /* Center the h2 and description text */
    h2,
    .description,
    .description2 {
        text-align: center;
        margin: 0 auto;
    }

    .body-content {
        flex-wrap: wrap;
        display: inline-block;
        margin-top: 0px;
    }

    /* Display one portfolio item per row on mobile */
    .portfolio {
        justify-content: center;
        align-items: center;
    }

    .portfolio-item {
        width: 100%;
        height: auto;
        margin-bottom: 16px;
    }
}

